fixed contrast of h2

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h1 {
 h2 {
     font-size: 14px;
     padding-bottom: 15px;
-    color: #0079A8;
+    color: #00ACF0;
     line-height: 1.5;
     font-weight: medium;
 }
